--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,13 @@
 			<version>3.0.5</version>
 			<scope>test</scope>
 		</dependency>
+        <!--h2-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
