--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,38 @@
 spring.application.name=wara
 server.port=8050
 
-# JDBC (??? H2 DB)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# -----------------------------
+# PostgreSQL (Render) ??
+# -----------------------------
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=20
 
+# Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# -----------------------------
 # MyBatis
+# -----------------------------
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:/mappers/*.xml
 mybatis.type-aliases-package=com.project.wara.domain
 
+# -----------------------------
 # Thymeleaf
+# -----------------------------
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-# File
+# -----------------------------
+# File upload
+# -----------------------------
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
