--- a/pom.xml
+++ b/pom.xml
@@ -103,10 +103,9 @@
 		</dependency>
 		<!--h2-->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.3.232</version>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
         </dependency>
 	</dependencies>
 
